--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,8 @@
 {
     "version": 2,
     "builds": [
-        {
-            "src": "app.js",
-            "use": "@vercel/node"
-        }
+      { "src": "app.js", "use": "@vercel/node" 
+    }
     ],
     "routes": [
         {
